Ping job, unique IP, and more server fields.
